deploy/k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: adirai-connect
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
